# detecto

./: .gitignore  CONTRIBUTING.md  DETECTO_FINDINGS_1_42_IMPLEMENTATION_REPORT.md  GITHUB_REPO_INFO.md  LICENSE  Makefile  PULL_REQUEST.md  RELEASE-v1.0.md  RELEASE-v2.0.0.md  VSNR_Erklaerung_Email.md  WEBSITE_TEXT_CHANGES.md  changelog.md  constraints.txt  detecto.ini  detecto_cli.py  detecto_original.py  firststeps.md  generate_presentation.js  kritische_logdaten_findings.md  package-lock.json  prompt_documentation.md  pyproject.toml  readme.md  regexp.csv  run_detecto.py  stopword_suchmuster.txt  suchmuster.csv
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: supply-chain.yml  tests.yml
.mypy_cache/3.10/: cache.0.db-journal
benchmarks/: perf_benchmark.py  quality_benchmark.py
src/detecto/: __init__.py  __main__.py  analyzer.py  anonymizer.py  cli.py  config.py  constants.py  diagnostics.py  exporter.py  formatter.py  loaders.py  reader.py  regexsafe.py  tokenizer.py  utils.py  validators.py
src/detecto/data/: detecto.ini  regexp.csv  stopword_field.txt  stopword_regexp.txt
src/detecto/data/suchmuster/: diagnosen.csv  nachnamen.csv  sicherheitsbegriffe.csv  vornamen.csv
suchmuster/: orte.csv  sperrvermerke.csv  verschlusssachen.csv
suchmuster/andere/: deutsche_nachnamen_top_5000 Kopie.csv  deutsche_nachnamen_top_5000.csv  deutsche_nachnamen_top_5000_slim.csv  deutsche_orte_top_5000.csv  deutsche_orte_top_5000_slim.csv  deutsche_vornamen_top_5000.csv  deutsche_vornamen_top_5000_mit_gender.csv  deutsche_vornamen_top_5000_mit_gender_majority.csv  deutsche_vornamen_top_5000_slim.csv  nachnamen.small.csv  ort.small.csv  vornamen.small.csv
synthetic_logs/: README.md  generate_samples.py
tests/: test_analyzer.py  test_anonymizer.py  test_confidence_quality.py  test_config_precedence.py  test_credential_masking.py  test_duplicate_ids.py  test_exporter.py  test_json_mode.py  test_limits.py  test_loaders.py  test_packaging.py  test_perf_and_excel.py  test_performance_smoke.py  test_positions_determinism.py  test_property_fuzz.py  test_reader.py  test_regex_scope.py  test_regex_timeout.py  test_regressions.py  test_scan_status.py  test_sensitive_output.py  test_symlink_safety.py  test_tokenizer.py  test_tokenizer_robustness.py  test_validators.py  test_worksheets_defaults.py
