[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "detecto"
version = "2.0.0"
description = "Log file scanner for critical and personal data"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Alexander Kornbrust"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Logging",
]
# 'regex' provides per-match runtime timeouts (Finding 1). Detecto still runs
# without it (falling back to the stdlib 're', losing only runtime timeouts),
# but it is a recommended core dependency. Major version is capped.
dependencies = ["regex>=2023.0,<2026.0"]

[project.optional-dependencies]
# Excel export is optional (Finding 29): install with `pip install detecto[excel]`.
excel = ["openpyxl>=3.1,<4"]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.0",
    "openpyxl>=3.1,<4",
    "regex>=2023.0,<2026.0",
    "build>=1.0",
]

[project.scripts]
detecto = "detecto.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
detecto = [
    "data/*.ini",
    "data/*.csv",
    "data/*.txt",
    "data/suchmuster/*.csv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
